--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,4 +1,4 @@
-<h2 id="titleBadge"><%= t('payments').pluralize %></h2>
+<h2 id="titleBadge" display="payments"><%= t('payments').pluralize %></h2>
 <hr>
 
 <table>
