--- a/app/views/extras/index.html.erb
+++ b/app/views/extras/index.html.erb
@@ -1,4 +1,4 @@
-<h2 id="titleBadge"><%= t('extras').pluralize %></h2>
+<h2 id="titleBadge" display="extras"><%= t('extras').pluralize %></h2>
 <hr>
 <%= search_form_for @search do |form| %>
   <div class="form">
@@ -7,16 +7,24 @@
     </div>
   </div>
 <% end %>
-<%= link_to '+', new_extra_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+<%= link_to '+', new_extra_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
 
 <table class="table table-hover table-striped" id="table-to-color">
   <thead class=thead-dark>
 
   <tr>
-    <th><%= t('Name') %></th>
-    <th><%= t('unit') %></th>
-    <th><%= t('unit_price') %>
-    <th><%= t('tva_rate') %> </th>
+    <th>
+      <%= sort_link(@search, :name, t('extra_name')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :unit, t('unit')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :unit_price, t('unit_price')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :tva_rate, t('tva_rate')) %>
+    </th>
     <th></th>
   </tr>
   </thead>
@@ -28,7 +36,7 @@
       <td><%= extra.unit %></td>
       <td><%= extra.unit_price %></td>
       <td><%= extra.tva_rate %></td>
-      <td class="centerCell">
+      <td class="center-cell">
         <%= link_to edit_extra_path(extra), remote: true do %>
           <%= image_tag("edit-icon.png", size: "30x30") %>
         <% end %>
