--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,148 +1,208 @@
-<h2 id="titleBadge"><%= t('project') %></h2>
-<h4>
-  <%= @project.name %> - <%= if @project.customer
-                               @project.customer.name
-                             end
-%>
+<div class="info-project">
+  <table>
+    <tr>
+      <td>
+        <h5>
+          <%= t('project') + ' : ' + @project.name %>
+          <%= link_to edit_project_path(@project), remote: true do %>
+            <%= image_tag("edit-icon.png", size: "20x20") %>
+          <% end %>
+          <br>
+          <%= @project.customer ? t('customer') + ' : ' + @project.customer.name : "" %>
+          <%= link_to edit_customer_path(@project.customer), remote: true do %>
+            <%= image_tag("edit-icon.png", size: "20x20") %>
+          <% end %>
+          <br>
+          <%= t('status') + ' : ' + @project.status %>
 
-</h4>
+        </h5>
+      </td>
+      <td>
+        <h2 id="titleBadge" display="project"><%= t('project') %></h2>
+      </td>
+      <td class="right-cell">
+        <%= link_to t('back_to_projects'), projects_path, {class: 'btn btn-secondary'} %>
+      </td>
+    </tr>
+  </table>
+</div>
+
 <div id="projectId" data-somedata="<%= @project.id %>">
 </div>
-<h5>
-  <%= link_to '+', new_ware_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  <%= t('ware').pluralize.capitalize %>
-</h5>
-<table class="table table-hover table-striped" id="table-to-color">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('ware_name') %></th>
-    <th><%= t('provider_name') %></th>
-    <th><%= t('comment') %></th>
-    <th><%= t('status') %></th>
-    <th></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% unless @project.wares.any? %>
+<hr>
+<div class="project-section">
+  <h5>
+    <%= link_to t('ware').pluralize.capitalize, new_ware_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+  </h5>
+  <table class="table table-hover table-striped" id="table-to-color">
+    <thead class=thead-dark>
     <tr>
-      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      <th><%= t('ware_name') %></th>
+      <th><%= t('provider_name') %></th>
+      <th><%= t('comment') %></th>
+      <th><%= t('status') %></th>
+      <th class="right-cell"><%= t('total_gross') %> (€)</th>
+      <th class="right-cell"><%= t('total_cost') %> (€)</th>
+      <th></th>
     </tr>
-  <% end %>
-  <% @project.wares.each do |ware| %>
-    <tr>
-      <td><%= ware.ware_name %></td>
-      <td><%= ware.provider_name %></td>
-      <td><%= ware.comment %></td>
-      <td id="status-cell"><%= ware.status %></td>
-      <td class="centerCell">
-        <%= link_to edit_ware_path(ware), remote: true do %>
-          <%= image_tag("edit-icon.png", size: "30x30") %>
-        <% end %>
-        <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
-          <%= image_tag("delete-icon.png", size: "30x30") %>
-        <% end %>
+    </thead>
+
+    <tbody>
+    <% unless @project.wares.any? %>
+      <tr>
+        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      </tr>
+    <% end %>
+    <% @project.wares.each do |ware| %>
+      <tr>
+        <td><%= ware.ware_name %></td>
+        <td><%= ware.provider_name %></td>
+        <td><%= ware.comment %></td>
+        <td id="status-cell"><%= ware.status %></td>
+        <td class="right-cell total-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
+        <td class="right-cell total-cell"><%= number_with_precision ware.total_cost, :precision => 2 %></td>
+        <td class="buttons-cell center-cell">
+          <%= link_to edit_ware_path(ware), remote: true do %>
+            <%= image_tag("edit-icon.png", size: "30x30") %>
+          <% end %>
+          <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
+            <%= image_tag("delete-icon.png", size: "30x30") %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <table class="table totals-table">
+    <tr class="totals-row">
+      <td class="right-cell total-cell">
+        <%= t('total_gross') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
+      </td>
+      <td class="right-cell total-cell">
+        <%= t('total') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
       </td>
     </tr>
-  <% end %>
-  </tbody>
-</table>
-<h5>
-  <%= link_to '+', new_service_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  <%= t('service').pluralize.capitalize %>
-</h5>
+  </table>
+</div>
+<hr>
+<div class="project-section">
+  <h5>
+    <%= link_to t('service').pluralize.capitalize, new_service_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+  </h5>
 
-<table class="table table-hover table-striped" id="table-to-color2">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Name') %></th>
-    <th><%= t('comment') %></th>
-    <th><%= t('status') %></th>
-    <th><%= t('Date') %></th>
-    <th><%= t('hourly_rate') %></th>
-    <th><%= t('duration') %></th>
-    <th><%= t('tva_rate') %></th>
-    <th><%= t('total_cost') %></th>
-    <th></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% unless @project.services.any? %>
+  <table class="table table-hover table-striped" id="table-to-color2">
+    <thead class=thead-dark>
     <tr>
-      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      <th><%= t('Name') %></th>
+      <th><%= t('comment') %></th>
+      <th><%= t('status') %></th>
+      <th class="center-cell"><%= t('Date') %></th>
+      <th class="right-cell"><%= t('hourly_rate') %></th>
+      <th class="center-cell"><%= t('duration') %></th>
+      <th class="right-cell"><%= t('tva_rate') %> (%)</th>
+      <th class="right-cell"><%= t('total_gross') %> (€)</th>
+      <th class="right-cell"><%= t('total_cost') %> (€)</th>
+      <th></th>
     </tr>
-  <% end %>
-  <% @project.services.each do |service| %>
-    <tr>
-      <td><%= service.name %></td>
-      <td><%= service.comment %></td>
-      <td id="status-cell"><%= service.status %></td>
-      <td><%= service.date %></td>
-      <td><%= service.hourly_rate %></td>
-      <td><%= service.duration.strftime('%H:%M') %></td>
-      <td><%= service.tva_rate %></td>
-      <td><%= number_with_precision service.total_cost, :precision => 2 %></td>
-      <td class="centerCell">
-        <%= link_to edit_service_path(service), remote: true do %>
-          <%= image_tag("edit-icon.png", size: "30x30") %>
-        <% end %>
-        <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
-          <%= image_tag("delete-icon.png", size: "30x30") %>
-        <% end %>
+    </thead>
+
+    <tbody>
+    <% unless @project.services.any? %>
+      <tr>
+        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      </tr>
+    <% end %>
+    <% @project.services.each do |service| %>
+      <tr>
+        <td><%= service.name %></td>
+        <td><%= service.comment %></td>
+        <td id="status-cell"><%= service.status %></td>
+        <td class="center-cell"><%= service.date %></td>
+        <td class="right-cell"><%= service.hourly_rate %></td>
+        <td class="center-cell"><%= service.duration.strftime('%H:%M') %></td>
+        <td class="right-cell"><%= service.tva_rate %></td>
+        <td class="right-cell total-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
+        <td class="right-cell total-cell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
+        <td class="buttons-cell center-cell">
+          <%= link_to edit_service_path(service), remote: true do %>
+            <%= image_tag("edit-icon.png", size: "30x30") %>
+          <% end %>
+          <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
+            <%= image_tag("delete-icon.png", size: "30x30") %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <table class="table totals-table">
+    <tr class="totals-row">
+      <td class="right-cell total-cell">
+        <%= t('total_gross') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
+      </td>
+      <td class="right-cell total-cell">
+        <%= t('total') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
       </td>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+  </table>
+</div>
+<hr>
+<div class="project-section">
+  <h5>
+    <%= link_to t('extra').pluralize.capitalize, new_project_extra_line_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+  </h5>
 
-<h5>
-  <%= link_to '+', new_project_extra_line_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  <%= t('extra').pluralize.capitalize %>
-</h5>
-
-<table class="table table-hover table-striped" id="table-to-color2">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Name') %></th>
-    <th><%= t('unit') %></th>
-    <th><%= t('unit_price') %></th>
-    <th><%= t('quantity') %></th>
-    <th><%= t('total_gross') %></th>
-    <th><%= t('total_cost') %></th>
-    <th></th>
-    <th></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% unless @project.project_extra_lines.any? %>
+  <table class="table table-hover table-striped" id="table-to-color2">
+    <thead class=thead-dark>
     <tr>
-      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      <th><%= t('Name') %></th>
+      <th class="center-cell"><%= t('unit') %></th>
+      <th class="right-cell"><%= t('unit_price') %> (€)</th>
+      <th class="right-cell"><%= t('quantity') %></th>
+      <th class="right-cell"><%= t('total_gross') %> (€)</th>
+      <th class="right-cell"><%= t('total_cost') %> (€)</th>
+      <th></th>
     </tr>
-  <% end %>
-  <% @project.project_extra_lines.each do |project_extra_line| %>
-    <tr>
-      <td><%= project_extra_line.extra.name %></td>
-      <td><%= project_extra_line.extra.unit %></td>
-      <td><%= project_extra_line.extra.unit_price %></td>
-      <td><%= project_extra_line.quantity %></td>
-      <td><%= project_extra_line.total_gross %></td>
-      <td><%= project_extra_line.total %></td>
-      <td class="centerCell">
-        <%= link_to edit_project_extra_line_path(project_extra_line), remote: true do %>
-          <%= image_tag("edit-icon.png", size: "30x30") %>
-        <% end %>
+    </thead>
+
+    <tbody>
+    <% unless @project.project_extra_lines.any? %>
+      <tr>
+        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      </tr>
+    <% end %>
+    <% @project.project_extra_lines.each do |project_extra_line| %>
+      <tr>
+        <td><%= project_extra_line.extra.name %></td>
+        <td class="center-cell"><%= project_extra_line.extra.unit %></td>
+        <td class="right-cell"><%= project_extra_line.extra.unit_price %></td>
+        <td class="right-cell"><%= project_extra_line.quantity %></td>
+        <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
+        <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total, :precision => 2 %></td>
+        <td class="buttons-cell center-cell">
+          <%= link_to edit_project_extra_line_path(project_extra_line), remote: true do %>
+            <%= image_tag("edit-icon.png", size: "30x30") %>
+          <% end %>
+          <%= link_to project_extra_line, method: :delete, data: {confirm: t('confirm_delete')} do %>
+            <%= image_tag("delete-icon.png", size: "30x30") %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  <table class="table totals-table">
+    <tr class="totals-row">
+      <td class="right-cell total-cell">
+        <%= t('total_gross') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
       </td>
-      <td class="centerCell">
-        <%= link_to project_extra_line, method: :delete, data: {confirm: t('confirm_delete')} do %>
-          <%= image_tag("delete-icon.png", size: "30x30") %>
-        <% end %>
+      <td class="right-cell total-cell">
+        <%= t('total') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total : 0}.sum, :precision => 2).to_s %>
       </td>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+  </table>
+</div>
+
 
 <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -152,4 +212,3 @@
   </div>
 </div>
 
-<%= link_to 'Retour', projects_path %>
