--- a/app/views/quotations/index.html.erb
+++ b/app/views/quotations/index.html.erb
@@ -1,4 +1,4 @@
-<h2 id="titleBadge"><%= t('quotation').pluralize %></h2>
+<h2 id="titleBadge" display="quotations"><%= t('quotation').pluralize %></h2>
 <hr>
 <%= search_form_for @search do |form| %>
   <div class="form">
@@ -16,7 +16,7 @@
         <%= form.select :status_eq, Quotation.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
-        <%= link_to '+', new_quotation_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+        <%= link_to '+', new_quotation_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
       </div>
     </div>
   </div>
@@ -25,11 +25,21 @@
 <table class="table table-hover table-striped" id="table-to-color">
   <thead class=thead-dark>
   <tr>
-    <th><%= t('customer').capitalize %></th>
-    <th><%= t('Date') %></th>
-    <th><%= t('status') %></th>
-    <th><%= t('gross_cost').to_s + ' (€)' %></th>
-    <th><%= t('Total').to_s + ' (€)' %></th>
+    <th>
+      <%= sort_link(@search, :customer_id, t('customer')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :date, t('date_locale')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :status, t('status')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :total_gross, t('gross_cost').to_s + ' (€)') %>
+    </th>
+    <th>
+      <%= sort_link(@search, :total, t('total').to_s + ' (€)') %>
+    </th>
     <th></th>
   </tr>
   </thead>
@@ -48,7 +58,7 @@
       <td id="status-cell"><%= quotation.status %></td>
       <td><%= number_with_precision quotation.total_gross, :precision => 2 %></td>
       <td><%= number_with_precision quotation.total, :precision => 2 %></td>
-      <td class="centerCell" >
+      <td class="center-cell">
         <%= link_to edit_quotation_path(quotation), remote: true do %>
           <%= image_tag("edit-icon.png", size: "30x30") %>
         <% end %>
