--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,4 +1,4 @@
-<h2 id="titleBadge"><%= t(:service).pluralize %></h2>
+<h2 id="titleBadge" display="services"><%= t(:service).pluralize %></h2>
 <hr>
 <%= search_form_for @search do |form| %>
   <div class="form">
@@ -17,7 +17,7 @@
         <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
-        <%= link_to '+', new_service_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+        <%= link_to '+', new_service_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
       </div>
     </div>
   </div>
@@ -26,15 +26,33 @@
 <table class="table table-hover table-striped" id="table-to-color">
   <thead class=thead-dark>
   <tr>
-    <th class="centerCell"><%= t(:project).capitalize %></th>
-    <th><%= t('Description') %></th>
-    <th><%= t('comment') %></th>
-    <th class="centerCell"><%= t('status') %></th>
-    <th class="centerCell"><%= t('Date') %></th>
-    <th class="rightCell"><%= t('hourly_rate').to_s + ' (€/H)' %></th>
-    <th class="centerCell"><%= t('duration').to_s + ' (H)' %></th>
-    <th class="rightCell"><%= t('tva_rate').to_s + ' (%)' %></th>
-    <th class="rightCell"><%= t('total_cost').to_s + ' (€)' %></th>
+    <th class="center-cell">
+      <%= sort_link(@search, :project_id, t('project')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :description, t('description')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :comment, t('comment')) %>
+    </th>
+    <th class="center-cell">
+      <%= sort_link(@search, :status, t('status')) %>
+    </th>
+    <th class="center-cell">
+      <%= sort_link(@search, :date, t('date_locale')) %>
+    </th>
+    <th class="right-cell">
+      <%= sort_link(@search, :hourly_rate, t('hourly_rate').to_s + ' (€/H)') %>
+    </th>
+    <th class="center-cell">
+      <%= sort_link(@search, :duration, t('duration').to_s + ' (H)') %>
+    </th>
+    <th class="right-cell">
+      <%= sort_link(@search, :tva_rate,  t('tva_rate').to_s + ' (%)') %>
+    </th>
+    <th class="right-cell">
+      <%= sort_link(@search, :total_cost, t('total_cost').to_s + ' (€)') %>
+    </th>
     <th></th>
   </tr>
   </thead>
@@ -47,18 +65,18 @@
   <% end %>
   <% @services.each do |service| %>
     <tr>
-      <td class="centerCell">
+      <td class="center-cell">
         <%= service.project ? (link_to '#' + service.project.id.to_s, project_path(service.project.id)) : '' %>
       </td>
       <td><%= service.name %></td>
       <td><%= service.comment %></td>
-      <td class="centerCell" id="status-cell"><%= service.status %></td>
-      <td class="centerCell"><%= l(service.date) %></td>
-      <td class="rightCell"><%= service.hourly_rate %></td>
-      <td class="centerCell"><%= service.duration.strftime('%H:%M') %></td>
-      <td class="rightCell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
-      <td class="rightCell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
-      <td class="centerCell">
+      <td class="center-cell" id="status-cell"><%= service.status %></td>
+      <td class="center-cell"><%= l(service.date) %></td>
+      <td class="right-cell"><%= service.hourly_rate %></td>
+      <td class="center-cell"><%= service.duration.strftime('%H:%M') %></td>
+      <td class="right-cell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
+      <td class="right-cell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
+      <td class="center-cell">
         <%= link_to edit_service_path(service), remote: true do %>
           <%= image_tag("edit-icon.png", size: "30x30") %>
         <% end %>
