--- a/app/views/layouts/pdf.html.html.erb
+++ b/app/views/layouts/pdf.html.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Facture</title>
-    <%= wicked_pdf_stylesheet_link_tag "style" %>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
 </head>
 <%= yield %>
 </html>
