--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,21 +1,7 @@
-<div class="info-project">
+<div class="header-project">
   <table>
     <tr>
       <td>
-        <h5>
-          <%= t('project') + ' : ' + @project.name %>
-          <%= link_to edit_project_path(@project), remote: true do %>
-            <%= image_tag("edit-icon.png", size: "20x20") %>
-          <% end %>
-          <br>
-          <%= @project.customer ? t('customer') + ' : ' + @project.customer.name : "" %>
-          <%= link_to edit_customer_path(@project.customer), remote: true do %>
-            <%= image_tag("edit-icon.png", size: "20x20") %>
-          <% end %>
-          <br>
-          <%= t('status') + ' : ' + @project.status %>
-
-        </h5>
       </td>
       <td>
         <h2 id="titleBadge" display="project"><%= t('project') %></h2>
@@ -30,179 +16,242 @@
 <div id="projectId" data-somedata="<%= @project.id %>">
 </div>
 <hr>
-<div class="project-section">
-  <h5>
-    <%= link_to t('ware').pluralize.capitalize, new_ware_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  </h5>
-  <table class="table table-hover table-striped" id="table-to-color">
-    <thead class=thead-dark>
-    <tr>
-      <th><%= t('ware_name') %></th>
-      <th><%= t('provider_name') %></th>
-      <th><%= t('comment') %></th>
-      <th><%= t('status') %></th>
-      <th class="right-cell"><%= t('total_gross') %> (€)</th>
-      <th class="right-cell"><%= t('total_cost') %> (€)</th>
-      <th></th>
-    </tr>
-    </thead>
+<div class="project-content">
 
-    <tbody>
-    <% unless @project.wares.any? %>
-      <tr>
-        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-      </tr>
-    <% end %>
-    <% @project.wares.each do |ware| %>
-      <tr>
-        <td><%= ware.ware_name %></td>
-        <td><%= ware.provider_name %></td>
-        <td><%= ware.comment %></td>
-        <td id="status-cell"><%= ware.status %></td>
-        <td class="right-cell total-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
-        <td class="right-cell total-cell"><%= number_with_precision ware.total_cost, :precision => 2 %></td>
-        <td class="buttons-cell center-cell">
-          <%= link_to edit_ware_path(ware), remote: true do %>
-            <%= image_tag("edit-icon.png", size: "30x30") %>
-          <% end %>
-          <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
-            <%= image_tag("delete-icon.png", size: "30x30") %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-  <table class="table totals-table">
-    <tr class="totals-row">
-      <td class="right-cell total-cell">
-        <%= t('total_gross') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
-      </td>
-      <td class="right-cell total-cell">
-        <%= t('total') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
-      </td>
-    </tr>
-  </table>
+  <div class="panel">
+    <div class="project-section project-recap">
+      <h5>
+        <%= link_to t('project').capitalize, edit_project_path(@project), {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </h5>
+      <table>
+        <tr>
+          <td>
+            <table class="project-info">
+              <tr>
+                <td>
+                  <%= t('project_title') %>
+                </td>
+                <td>
+                  <%= @project.name %>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <%= t('customer') %>
+                </td>
+                <td>
+                  <% if @project.customer %>
+                    <%= @project.customer.name %>
+                    <%= link_to edit_customer_path(@project.customer), remote: true do %>
+                      <%= image_tag("edit-icon.png", size: "20x20") %>
+                    <% end %>
+                  <% end %>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <%= t('status') %>
+                </td>
+                <td>
+                  <%= @project.status %>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <%= t('date_locale') %>
+                </td>
+                <td>
+                  <%= l(@project.date) %>
+                </td>
+              </tr>
+            </table>
+          </td>
+          <td class="left-cell">
+            <%= "Description :" %>
+            <br>
+            <%= @project.description %>
+          </td>
+        </tr>
+      </table>
+      <table class="table totals-table">
+        <tr class="totals-row">
+          <td class="center-cell total-cell">
+            <%= t('project_total_gross') + ' : ' + (number_with_precision @project.total_gross, :precision => 2).to_s %>
+            €
+          </td>
+          <td class="center-cell total-cell">
+            <%= t('project_total') + ' : ' + (number_with_precision @project.total, :precision => 2).to_s %> €
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="project-section">
+      <h5>
+        <%= link_to t('service').pluralize.capitalize, new_service_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </h5>
+
+      <table class="table table-hover table-striped" id="table-to-color2">
+        <thead class=thead-dark>
+        <tr>
+          <th><%= t('Name') %></th>
+          <th><%= t('status') %></th>
+          <th class="center-cell"><%= t('Date') %></th>
+          <th class="right-cell"><%= t('total_gross') %> (€)</th>
+          <th class="right-cell"><%= t('total_cost') %> (€)</th>
+          <th></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <% unless @project.services.any? %>
+          <tr>
+            <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+          </tr>
+        <% end %>
+        <% @project.services.each do |service| %>
+          <tr data-link="<%= edit_service_path(service) %>">
+            <td><%= service.name %></td>
+            <td id="status-cell"><%= service.status %></td>
+            <td class="center-cell"><%= service.date %></td>
+            <td class="right-cell total-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
+            <td class="right-cell total-cell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
+            <td class="buttons-cell center-cell">
+              <%= link_to edit_service_path(service), remote: true do %>
+                <%= image_tag("edit-icon.png", size: "30x30") %>
+              <% end %>
+              <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
+                <%= image_tag("delete-icon.png", size: "30x30") %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <table class="table totals-table">
+        <tr class="totals-row">
+          <td class="right-cell total-cell">
+            <%= t('total_gross') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+          <td class="right-cell total-cell">
+            <%= t('total') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="panel">
+    <div class="project-section project-wares">
+      <h5>
+        <%= link_to t('ware').pluralize.capitalize, new_ware_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </h5>
+      <table class="table table-hover table-striped" id="table-to-color">
+        <thead class=thead-dark>
+        <tr>
+          <th><%= t('ware_name') %></th>
+          <th><%= t('status') %></th>
+          <th class="right-cell"><%= t('total_gross') %> (€)</th>
+          <th class="right-cell"><%= t('total_cost') %> (€)</th>
+          <th></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <% unless @project.wares.any? %>
+          <tr>
+            <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+          </tr>
+        <% end %>
+        <% @project.wares.each do |ware| %>
+          <tr data-link="<%= edit_ware_path(ware) %>">
+            <td><%= ware.ware_name %></td>
+            <td id="status-cell"><%= ware.status %></td>
+            <td class="right-cell total-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
+            <td class="right-cell total-cell"><%= number_with_precision ware.total_cost, :precision => 2 %></td>
+            <td class="buttons-cell center-cell">
+              <%= link_to edit_ware_path(ware), remote: true do %>
+                <%= image_tag("edit-icon.png", size: "30x30") %>
+              <% end %>
+              <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
+                <%= image_tag("delete-icon.png", size: "30x30") %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <table class="table totals-table">
+        <tr class="totals-row">
+          <td class="right-cell total-cell">
+            <%= t('total_gross') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+          <td class="right-cell total-cell">
+            <%= t('total') + ' : ' + (number_with_precision @project.wares.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+        </tr>
+      </table>
+    </div>
+    <hr>
+    <div class="project-section">
+      <h5>
+        <%= link_to t('extra').pluralize.capitalize, new_project_extra_line_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </h5>
+
+      <table class="table table-hover table-striped" id="table-to-color2">
+        <thead class=thead-dark>
+        <tr>
+          <th><%= t('Name') %></th>
+          <th class="center-cell"><%= t('unit') %></th>
+          <th class="right-cell"><%= t('total_gross') %> (€)</th>
+          <th class="right-cell"><%= t('total_cost') %> (€)</th>
+          <th></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <% unless @project.project_extra_lines.any? %>
+          <tr>
+            <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+          </tr>
+        <% end %>
+        <% @project.project_extra_lines.each do |project_extra_line| %>
+          <tr data-link="<%= edit_project_extra_line_path(project_extra_line) %>">
+            <td><%= project_extra_line.extra.name %></td>
+            <td class="center-cell"><%= project_extra_line.extra.unit %></td>
+            <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
+            <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total, :precision => 2 %></td>
+            <td class="buttons-cell center-cell">
+              <%= link_to edit_project_extra_line_path(project_extra_line), remote: true do %>
+                <%= image_tag("edit-icon.png", size: "30x30") %>
+              <% end %>
+              <%= link_to project_extra_line, method: :delete, data: {confirm: t('confirm_delete')} do %>
+                <%= image_tag("delete-icon.png", size: "30x30") %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <table class="table totals-table">
+        <tr class="totals-row">
+          <td class="right-cell total-cell">
+            <%= t('total_gross') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+          <td class="right-cell total-cell">
+            <%= t('total') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total : 0}.sum, :precision => 2).to_s %>
+            €
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
 </div>
-<hr>
-<div class="project-section">
-  <h5>
-    <%= link_to t('service').pluralize.capitalize, new_service_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  </h5>
-
-  <table class="table table-hover table-striped" id="table-to-color2">
-    <thead class=thead-dark>
-    <tr>
-      <th><%= t('Name') %></th>
-      <th><%= t('comment') %></th>
-      <th><%= t('status') %></th>
-      <th class="center-cell"><%= t('Date') %></th>
-      <th class="right-cell"><%= t('hourly_rate') %></th>
-      <th class="center-cell"><%= t('duration') %></th>
-      <th class="right-cell"><%= t('tva_rate') %> (%)</th>
-      <th class="right-cell"><%= t('total_gross') %> (€)</th>
-      <th class="right-cell"><%= t('total_cost') %> (€)</th>
-      <th></th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <% unless @project.services.any? %>
-      <tr>
-        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-      </tr>
-    <% end %>
-    <% @project.services.each do |service| %>
-      <tr>
-        <td><%= service.name %></td>
-        <td><%= service.comment %></td>
-        <td id="status-cell"><%= service.status %></td>
-        <td class="center-cell"><%= service.date %></td>
-        <td class="right-cell"><%= service.hourly_rate %></td>
-        <td class="center-cell"><%= service.duration.strftime('%H:%M') %></td>
-        <td class="right-cell"><%= service.tva_rate %></td>
-        <td class="right-cell total-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
-        <td class="right-cell total-cell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
-        <td class="buttons-cell center-cell">
-          <%= link_to edit_service_path(service), remote: true do %>
-            <%= image_tag("edit-icon.png", size: "30x30") %>
-          <% end %>
-          <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
-            <%= image_tag("delete-icon.png", size: "30x30") %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-  <table class="table totals-table">
-    <tr class="totals-row">
-      <td class="right-cell total-cell">
-        <%= t('total_gross') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
-      </td>
-      <td class="right-cell total-cell">
-        <%= t('total') + ' : ' + (number_with_precision @project.services.collect {|s| s.valid? ? s.total_cost : 0}.sum, :precision => 2).to_s %>
-      </td>
-    </tr>
-  </table>
-</div>
-<hr>
-<div class="project-section">
-  <h5>
-    <%= link_to t('extra').pluralize.capitalize, new_project_extra_line_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-  </h5>
-
-  <table class="table table-hover table-striped" id="table-to-color2">
-    <thead class=thead-dark>
-    <tr>
-      <th><%= t('Name') %></th>
-      <th class="center-cell"><%= t('unit') %></th>
-      <th class="right-cell"><%= t('unit_price') %> (€)</th>
-      <th class="right-cell"><%= t('quantity') %></th>
-      <th class="right-cell"><%= t('total_gross') %> (€)</th>
-      <th class="right-cell"><%= t('total_cost') %> (€)</th>
-      <th></th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <% unless @project.project_extra_lines.any? %>
-      <tr>
-        <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-      </tr>
-    <% end %>
-    <% @project.project_extra_lines.each do |project_extra_line| %>
-      <tr>
-        <td><%= project_extra_line.extra.name %></td>
-        <td class="center-cell"><%= project_extra_line.extra.unit %></td>
-        <td class="right-cell"><%= project_extra_line.extra.unit_price %></td>
-        <td class="right-cell"><%= project_extra_line.quantity %></td>
-        <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
-        <td class="right-cell total-cell"><%= number_with_precision project_extra_line.total, :precision => 2 %></td>
-        <td class="buttons-cell center-cell">
-          <%= link_to edit_project_extra_line_path(project_extra_line), remote: true do %>
-            <%= image_tag("edit-icon.png", size: "30x30") %>
-          <% end %>
-          <%= link_to project_extra_line, method: :delete, data: {confirm: t('confirm_delete')} do %>
-            <%= image_tag("delete-icon.png", size: "30x30") %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-  <table class="table totals-table">
-    <tr class="totals-row">
-      <td class="right-cell total-cell">
-        <%= t('total_gross') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total_gross : 0}.sum, :precision => 2).to_s %>
-      </td>
-      <td class="right-cell total-cell">
-        <%= t('total') + ' : ' + (number_with_precision @project.project_extra_lines.collect {|s| s.valid? ? s.total : 0}.sum, :precision => 2).to_s %>
-      </td>
-    </tr>
-  </table>
-</div>
-
 
 <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
