--- a/app/views/quotations/show.html.erb
+++ b/app/views/quotations/show.html.erb
@@ -2,7 +2,7 @@
   <div id="container">
     <section id="memo">
       <div class="logo">
-        <%= wicked_pdf_image_tag  "logo_greday.png" %>
+        <%= wicked_pdf_image_tag "logo_greday.png" %>
       </div>
       <div class="company-info">
         <div>THOMAS GREDAY</div>
@@ -48,10 +48,16 @@
 
     <section id="invoice-title-number">
       <span id="quotation-title">Devis</span>
-      <span id="number"><%= '#' + @quotation.id.to_s %></span>
       <div class="clearfix"></div>
-
+      <span id="quotation-number">
+      <h2>
+          <%= '#' + @quotation.id.to_s %>
+      </h2>
+      </span>
+      <div class="clearfix"></div>
     </section>
+
+
     <div class="clearfix"></div>
     <span id="dateInvoice">
           <%= "Wonck le, " + l(@quotation.date).to_s %>
@@ -59,73 +65,73 @@
     <hr>
 
     <% if @quotation.project %>
-        <section id="items" class="project">
-          <div class="title-project-container">
-            <h4 class="title-project">Projet #<%= @quotation.project.id %> : <%= @quotation.project.name %></h4>
-          </div>
-          <p><%= @quotation.project.description %></p>
-          <% if @quotation.project.services.any? %>
-            <h5>Prestations</h5>
+      <section id="items" class="project">
+        <div class="title-project-container">
+          <h4 class="title-project">Projet #<%= @quotation.project.id %> : <%= @quotation.project.name %></h4>
+        </div>
+        <p><%= @quotation.project.description %></p>
+        <% if @quotation.project.services.any? %>
+          <h5>Prestations</h5>
 
-            <table class="table table-hover table-striped">
-              <thead class=thead-dark>
-              <tr>
-                <th><%= t('Name') %></th>
-                <th><%= t('Date') %></th>
-                <th><%= t('duration') %></th>
-                <th><%= t('hourly_rate') + ' (€)' %></th>
-                <th><%= t('tva_rate') + ' (%)' %></th>
-                <th><%= t('total_gross') + ' (€)' %></th>
-                <th><%= t('total_cost') + ' (€)' %></th>
+          <table class="table table-hover table-striped">
+            <thead class=thead-dark>
+            <tr>
+              <th><%= t('Name') %></th>
+              <th><%= t('Date') %></th>
+              <th><%= t('duration') %></th>
+              <th><%= t('hourly_rate') + ' (€)' %></th>
+              <th><%= t('tva_rate') + ' (%)' %></th>
+              <th><%= t('total_gross') + ' (€)' %></th>
+              <th><%= t('total_cost') + ' (€)' %></th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <% @quotation.project.services.each do |service| %>
+              <tr data-link="<%= edit_service_path service %>">
+                <td><%= service.name %></td>
+                <td><%= service.date ? l(service.date) : "" %></td>
+                <td><%= service.duration.strftime('%H:%M') %></td>
+                <td><%= service.hourly_rate %></td>
+                <td><%= service.tva_rate %></td>
+                <td><%= service.total_gross %></td>
+                <td><%= service.total_cost %></td>
               </tr>
-              </thead>
+            <% end %>
+            </tbody>
+          </table>
+        <% end %>
+        <% if @quotation.project.wares.any? %>
+          <h5>Marchandises</h5>
 
-              <tbody>
-              <% @quotation.project.services.each do |service| %>
-                <tr data-link="<%= edit_service_path service %>">
-                  <td><%= service.name %></td>
-                  <td><%= service.date ? l(service.date) : "" %></td>
-                  <td><%= service.duration.strftime('%H:%M') %></td>
-                  <td><%= service.hourly_rate %></td>
-                  <td><%= service.tva_rate %></td>
-                  <td><%= service.total_gross %></td>
-                  <td><%= service.total_cost %></td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-          <% end %>
-          <% if @quotation.project.wares.any? %>
-            <h5>Marchandises</h5>
+          <table class="table table-hover table-striped">
+            <thead class=thead-dark>
+            <tr>
+              <th><%= t('ware_name') %></th>
+              <th><%= t('Quantity') %></th>
+              <th><%= t('sell_price') + ' (€)' %></th>
+              <th><%= t('tva_rate') + ' (%)' %></th>
+              <th><%= t('total_gross') + ' (€)' %></th>
+              <th><%= t('total_cost') + ' (€)' %></th>
+            </tr>
+            </thead>
 
-            <table class="table table-hover table-striped">
-              <thead class=thead-dark>
-              <tr>
-                <th><%= t('ware_name') %></th>
-                <th><%= t('Quantity') %></th>
-                <th><%= t('sell_price') + ' (€)' %></th>
-                <th><%= t('tva_rate') + ' (%)' %></th>
-                <th><%= t('total_gross') + ' (€)' %></th>
-                <th><%= t('total_cost') + ' (€)' %></th>
+            <tbody>
+            <% @quotation.project.wares.each do |ware| %>
+              <tr data-link="<%= edit_ware_path ware %>">
+                <td><%= ware.ware_name %></td>
+                <td><%= ware.quantity %></td>
+                <td><%= ware.sell_price %></td>
+                <td><%= ware.tva_rate %></td>
+                <td><%= ware.total_gross %></td>
+                <td><%= ware.total_cost %></td>
               </tr>
-              </thead>
-
-              <tbody>
-              <% @quotation.project.wares.each do |ware| %>
-                <tr data-link="<%= edit_ware_path ware %>">
-                  <td><%= ware.ware_name %></td>
-                  <td><%= ware.quantity %></td>
-                  <td><%= ware.sell_price %></td>
-                  <td><%= ware.tva_rate %></td>
-                  <td><%= ware.total_gross %></td>
-                  <td><%= ware.total_cost %></td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-          <% end %>
-        </section>
-      <% end %>
+            <% end %>
+            </tbody>
+          </table>
+        <% end %>
+      </section>
+    <% end %>
     </section>
 
     <section id="sums">
@@ -143,23 +149,23 @@
         </tr>
         <tr data-hide-on-quote="true">
           <th>TOTAL TTC (€)</th>
-          <td><%=number_with_precision @quotation.total, :precision => 2 %></td>
+          <td><%= number_with_precision @quotation.total, :precision => 2 %></td>
         </tr>
       </table>
       <div class="clearfix"></div>
     </section>
-<!--    <section id="notes">-->
-<!--      <h5>-->
-<!--        Les paiements se feront au compte BNP Fortis : <b>BE47 0015 7715 0480</b>-->
-<!--      </h5>-->
-<!--      <p>-->
-<!--        1) Le montant de la facture est payable dans les 8 jours. </br>-->
-<!--        2) Toute réclamation devra être formulée au plus tard dans les huit jours de la réception par lettre-->
-<!--        recommandée.</br>-->
-<!--        3) En cas de retard de paiement, un intérêt de 1% par mois est dû de plein droit, ainsi qu'une indemnité égale à-->
-<!--        15% du montant de la facture avec un minimum de 50€, sans sommation ni mise en demeure.</br>-->
-<!--        4) Pour tous litiges, seuls les tribunaux de Liège sont compétents.-->
-<!--      </p>-->
-<!--    </section>-->
+    <!--    <section id="notes">-->
+    <!--      <h5>-->
+    <!--        Les paiements se feront au compte BNP Fortis : <b>BE47 0015 7715 0480</b>-->
+    <!--      </h5>-->
+    <!--      <p>-->
+    <!--        1) Le montant de la facture est payable dans les 8 jours. </br>-->
+    <!--        2) Toute réclamation devra être formulée au plus tard dans les huit jours de la réception par lettre-->
+    <!--        recommandée.</br>-->
+    <!--        3) En cas de retard de paiement, un intérêt de 1% par mois est dû de plein droit, ainsi qu'une indemnité égale à-->
+    <!--        15% du montant de la facture avec un minimum de 50€, sans sommation ni mise en demeure.</br>-->
+    <!--        4) Pour tous litiges, seuls les tribunaux de Liège sont compétents.-->
+    <!--      </p>-->
+    <!--    </section>-->
   </div>
 </div>
