--- a/app/views/customers/edit.js.erb
+++ b/app/views/customers/edit.js.erb
@@ -2,4 +2,4 @@ $("#modal-window").find(".modal-content").html("<%= j (render 'new') %>");
 
 $(document).trigger('turbolinks:load');
 
-$("#modal-window").modal();
+$("#modal-window").modal({backdrop: 'static'});
