--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,3 +1,7 @@
+<button type="button" class="close" data-dismiss="modal">
+  <span aria-hidden="true">&times;</span>
+</button>
+
 <%= form_with(model: @customer, local: true, html: {autocomplete: 'off'}) do |form| %>
   <input autocomplete="false" name="hidden" type="text" style="display:none;">
   <div class="form center-div">
@@ -9,54 +13,66 @@
     <% end %>
 
     <div class="form-row">
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('Name') %>
         <%= form.text_field :name, class: "form-control", autocomplete: 'nope' %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('mail') %>
         <%= form.text_field :mail, class: "form-control", autocomplete: 'nope' %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('tva_record') %>
         <%= form.text_field :tva_record, class: "form-control", autocomplete: 'nope' %>
-      </div>
-
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
-        <%= form.label t('street') %>
-        <%= form.text_field :street, class: "form-control", autocomplete: 'nope' %>
       </div>
 
     </div>
 
     <div class="form-row">
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
-        <%= form.label t('number') %>
-        <%= form.number_field :number, class: "form-control", autocomplete: 'nope' %>
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+        <%= form.label t('phone_number') %>
+        <%= form.text_field :phone_number, class: "form-control", autocomplete: 'nope' %>
+      </div>
+
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-5">
+        <%= form.label t('street') %>
+        <%= form.text_field :street, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+        <%= form.label t('number') %>
+        <%= form.text_field :number, class: "form-control", autocomplete: 'nope' %>
+      </div>
+
+    </div>
+
+    <div class="form-row">
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('zip') %>
         <%= form.number_field :cp, class: "form-control", autocomplete: 'nope' %>
       </div>
 
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('locality') %>
         <%= form.text_field :locality, class: "form-control", autocomplete: 'nope' %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('country') %>
         <%= form.text_field :country, value: "Belgique", class: "form-control", autocomplete: 'nope' %>
       </div>
     </div>
+    <div class="form-row">
 
       <div class="actions col-12 createButton">
         <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
       </div>
+    </div>
   </div>
 <% end %>
