--- a/app/views/extras/_form.html.erb
+++ b/app/views/extras/_form.html.erb
@@ -1,3 +1,7 @@
+<button type="button" class="close" data-dismiss="modal">
+  <span aria-hidden="true">&times;</span>
+</button>
+
 <%= form_with(model: @extra, local: true) do |form| %>
   <div class="form center-div">
 
@@ -5,26 +9,33 @@
       <h3><%= t('editing_extra') %></h3>
     <% else %>
       <h3><%= t('creating_extra') %></h3>
-  <% end %>
+    <% end %>
 
     <div class="form-row">
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('ware_name') %>
         <%= form.text_field :name, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <%= form.label t('category') %>
+        <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', id: 'category_select_extra_line'} %>
+      </div>
+    </div>
+    <div class="form-row">
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('unit') %>
         <%= form.text_field :unit, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('unit_price') %>
         <%= form.text_field :unit_price, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('tva_rate') %>
         <%= form.text_field :tva_rate, class: "form-control" %>
       </div>
