--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,3 +1,7 @@
+<button type="button" class="close" data-dismiss="modal">
+  <span aria-hidden="true">&times;</span>
+</button>
+
 <%= form_with(model: @invoice, local: true, html: {autocomplete: 'off'}) do |form| %>
   <div class="form center-div">
 
@@ -9,17 +13,22 @@
 
     <div class="form-row">
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
+        <%= form.label t('invoice_number') %>
+        <%= form.collection_select :display_number, Invoice.all.order(display_number: :desc), :display_number, :display_number, {:include_blank => true}, {required: true, class: 'form-control', id: 'number_select_invoice'} %>
+      </div>
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
         <%= form.label t('customer') %>
-        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'customer_edit_select'} %>
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {required: true, class: 'form-control', id: 'customer_select_invoice'} %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
         <%= form.label t('status') %>
-        <%= form.select(:status, Invoice.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
+        <%= form.select(:status, Invoice.translated_statuses.map {|status| [status[0], status[1]]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-3">
         <%= form.label t('date_locale') %>
         <div class="picker-container">
           <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
@@ -30,7 +39,7 @@
 
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
         <%= form.label t('wares_to_invoice') %>
-        <%= form.select(:ware_ids, Ware.where(status: 'A facturer', project_id: nil)
+        <%= form.select(:ware_ids, Ware.where(status: :assigned_customer, project_id: nil)
             .or(Ware.where(invoice_id: @invoice ? @invoice : -1, project_id: nil))
             .collect {|ware| [ware.ware_name, ware.id, {customer: ware.customer ? ware.customer.id : ware.project ? ware.project.customer.id : -1}]}, {}, {class: 'form-control', id: 'select_wares_invoice', autocomplete: 'nope', :multiple => true}) %>
       </div>
@@ -38,11 +47,11 @@
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
         <%= form.label t('projects_done').pluralize %>
         <% if @invoice.id %>
-          <%= form.select(:project_ids, Project.where(status: 'Terminé')
+          <%= form.select(:project_ids, Project.where(status: :done)
               .or(Project.where(invoice_id: @invoice.id))
               .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {}, {class: 'form-control', id: 'select_projects_invoice', autocomplete: 'nope', :multiple => true}) %>
         <% else %>
-          <%= form.select(:project_ids, Project.where(status: 'Terminé')
+          <%= form.select(:project_ids, Project.where(status: :done)
               .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {}, {class: 'form-control', id: 'select_projects_invoice', autocomplete: 'nope', :multiple => true}) %>
         <% end %>
       </div>
