--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Invoice.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Invoice.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
         <%= link_to '+', new_invoice_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
@@ -26,15 +26,15 @@
   <thead class=thead-dark>
   <tr>
     <th>
-      <%= sort_link(@search, :id, t('invoice_number')) %>
+      <%= sort_link(@search, :display_number, t('invoice_number')) %>
     </th>
     <th>
       <%= sort_link(@search, :customer_id, t('customer')) %>
     </th>
-    <th>
+    <th class="center-cell">
       <%= sort_link(@search, :date, t('date_locale')) %>
     </th>
-    <th>
+    <th class="center-cell">
       <%= sort_link(@search, :status, t('status')) %>
     </th>
     <th>
@@ -55,13 +55,15 @@
   <% @invoices.each do |invoice| %>
     <tr>
       <td>
-        <%= invoice.id %>
+        <%= invoice.display_number %>
       </td>
       <td>
         <%= invoice.customer ? invoice.customer.name : '' %>
       </td>
-      <td><%= l(invoice.date) %></td>
-      <td id="status-cell"><%= invoice.status %></td>
+      <td class="center-cell"><%= l(invoice.date) %></td>
+      <%= tag.td class: 'center-cell', id: 'status-cell', status: invoice.status do %>
+        <%= invoice.translated_status %>
+      <% end %>
       <td><%= number_with_precision invoice.total_gross, :precision => 2 %></td>
       <td><%= number_with_precision invoice.total, :precision => 2 %></td>
       <td class="center-cell">
