--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <%# if FileTest.exist? "/javascript//" + filename %>
-  <%#= javascript_include_tag "#{filename}" %>
+  <%# if Rails.application.assets.find_asset("#{filename}.js") %>
+    <%#= javascript_include_tag "#{filename}" %>
   <%# end %>
 
   <%= favicon_link_tag asset_path('favicon.png'), :rel => 'icon', :type => 'image/png' %>
@@ -26,25 +26,21 @@
       <%= content_tag :div, class: "locale", data: {locale: current_user.locale} do %>
       <% end %>
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/wares">Marchandises</a>
-          </li>
-        <% if current_user.isAdmin %>
-          <li class="nav-item">
-            <a class="nav-link" href="/services">Prestations</a>
-          </li>
         <li class="nav-item">
-          <a class="nav-link" href="/projects">Projets</a>
+          <a class="nav-link" href="/projects"> Projets</a>
         </li>
-        <% end %>
+        <li class="nav-item">
+          <a class="nav-link" href="/wares">Marchandises</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/services">Prestations</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/customers">Clients</a>
         </li>
-        <% if current_user.isAdmin %>
-          <li class="nav-item">
-            <a class="nav-link" href="/extras">Divers</a>
-          </li>
-        <% end %>
+        <li class="nav-item">
+          <a class="nav-link" href="/extras">Divers</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/quotations">Devis</a>
         </li>
