--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,24 +1,67 @@
-<h2 id="titleBadge" display="payments"><%= t('payments').pluralize %></h2>
+<h2 id="titleBadge" display="payments"><%= t('payment').pluralize %></h2>
 <hr>
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
+        <%= link_to '+', new_payment_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
+    </div>
+  </div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Amount</th>
-      <th colspan="3"></th>
-    </tr>
+<table class="table table-hover table-striped" id="table-to-color">
+  <thead class=thead-dark>
+  <tr>
+    <th>
+      <%= sort_link(@search, :customer_id, t('customer')) %>
+    </th>
+    <th class="center-cell">
+      <%= sort_link(@search, :date, t('date_locale')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :reference, t('payment_reference')) %>
+    </th>
+    <th>
+      <%= sort_link(@search, :total, t('total').to_s + ' (€)') %>
+    </th>
+    <th></th>
+  </tr>
   </thead>
-
   <tbody>
-    <% @payments.each do |payment| %>
-      <tr>
-        <td><%= payment.date %></td>
-        <td><%= payment.amount %></td>
-        <td><%= link_to 'Show', payment %></td>
-        <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
-        <td><%= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% unless @payments.any? %>
+    <tr>
+      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+    </tr>
+  <% end %>
+  <% @payments.each do |payment| %>
+    <tr>
+      <td>
+        <%= payment.customer ? payment.customer.name : '' %>
+      </td>
+      <td class="center-cell"><%= l(payment.date) %></td>
+      <td><%= payment.reference %></td>
+      <td><%= number_with_precision payment.total, :precision => 2 %></td>
+      <td class="center-cell">
+        <%= link_to edit_payment_path(payment), remote: true do %>
+          <%= image_tag("edit-icon.png", size: "30x30") %>
+        <% end %>
+        <%= link_to payment, method: :delete, data: {confirm: t('confirm_delete')} do %>
+          <%= image_tag("delete-icon.png", size: "30x30") %>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
+<br>
+<div class="flickr_pagination">
+  <%= will_paginate @payments %>
+</div>
+
+<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+    </div>
+  </div>
+</div>
