--- a/app/views/project_extra_lines/_form.html.erb
+++ b/app/views/project_extra_lines/_form.html.erb
@@ -1,3 +1,7 @@
+<button type="button" class="close" data-dismiss="modal">
+  <span aria-hidden="true">&times;</span>
+</button>
+
 <%= form_for(@project_extra_line) do |form| %>
   <div class="form center-div">
     <% if @project_extra_line.id %>
@@ -13,19 +17,25 @@
         <%= form.collection_select :project_id, Project.all, :id, :name, {:include_blank => true}, {:required => true, class: 'form-control', id: 'project_extra_edit_select'} %>
       </div>
 
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <%= form.label t('category') %>
+        <%= form.collection_select :id, Extra.all, :id, :category, {:include_blank => true}, {required: true, class: 'form-control', id: 'category_select_extra_line'} %>
+      </div>
+
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('extra') %>
-        <%= form.collection_select :extra_id, Extra.all, :id, :name, {:include_blank => true}, {:required => true, class: 'form-control', id: 'extra_edit_select'} %>
-      </div>
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
-        <%= form.label t('unit') %>
-        <%= form.select(:id, Extra.all
-            .collect {|extra| [extra.unit, extra.id, {extra: extra.id}]}, {}, {class: 'form-control', id: 'extra_unit', autocomplete: 'nope', :disabled => true}) %>
+        <%= form.select(:extra_id, Extra.all.collect {|extra| [extra.name, extra.id, {category: extra.category}]}, {}, {class: 'form-control', id: 'extra_edit_select', autocomplete: 'nope'}) %>
       </div>
 
     </div>
 
     <div class="form-row">
+
+      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+        <%= form.label t('unit') %>
+        <%= form.select(:id, Extra.all
+            .collect {|extra| [extra.unit, extra.id, {extra: extra.id}]}, {}, {class: 'form-control', id: 'extra_unit', autocomplete: 'nope', :disabled => true}) %>
+      </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('Quantity') %>
