--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,25 +4,25 @@
   <div class="form">
     <div class="row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('project') %>
         <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Project.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('from') %>
         <div class="picker-container">
           <%= form.text_field :date_gteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectFrom", class: "form-control", onchange: 'this.form.submit();' %>
         </div>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('to') %>
         <div class="picker-container">
           <%= form.text_field :date_lteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectTo", class: "form-control", onchange: 'this.form.submit();' %>
@@ -79,7 +79,9 @@
       <td><%= project.name %></td>
       <td><%= project.description %></td>
       <td class="center-cell"><%= project.date ? l(project.date) : "" %></td>
-      <td class="center-cell" id="status-cell"><%= project.status %></td>
+      <%= tag.td class: 'center-cell', id: 'status-cell', status: project.status do %>
+        <%= project.translated_status %>
+      <% end %>
       <td class="right-cell"><%= number_with_precision project.total_gross, :precision => 2 %></td>
       <td class="right-cell"><%= number_with_precision project.total, :precision => 2 %></td>
       <td class="center-cell">
