--- a/app/views/quotations/_form.html.erb
+++ b/app/views/quotations/_form.html.erb
@@ -1,3 +1,7 @@
+<button type="button" class="close" data-dismiss="modal">
+  <span aria-hidden="true">&times;</span>
+</button>
+
 <%= form_with(model: @quotation, local: true, html: {autocomplete: 'off'}) do |form| %>
   <div class="form center-div">
 
@@ -29,7 +33,7 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('project') %>
-        <%= form.select(:project_id, Project.where(status: 'Devis')
+        <%= form.select(:project_id, Project.where(status: :quotation)
             .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {:include_blank => true}, {class: 'form-control', id: 'edit_quotation_projects', autocomplete: 'nope', :multiple => false}) %>
       </div>
 
