--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -4,17 +4,17 @@
   <div class="form">
     <div class="row">
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('project') %>
         <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('customer') %>
         <%= form.collection_select :project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Service.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
         <%= link_to '+', new_service_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
@@ -70,7 +70,9 @@
       </td>
       <td><%= service.name %></td>
       <td><%= service.comment %></td>
-      <td class="center-cell" id="status-cell"><%= service.status %></td>
+      <%= tag.td class: 'center-cell', id: 'status-cell', status: service.status do %>
+        <%= service.translated_status %>
+      <% end %>
       <td class="center-cell"><%= l(service.date) %></td>
       <td class="right-cell"><%= service.hourly_rate %></td>
       <td class="center-cell"><%= service.duration.strftime('%H:%M') %></td>
