--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -3,17 +3,17 @@
 <%= search_form_for @search do |form| %>
   <div class="form">
     <div class="row">
-      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-2">
         <%= form.label t('project') %>
         <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-2">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-2">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Ware.statuses.map {|status| [t(status[0]), status[1], {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
         <%= link_to '+', new_ware_path, {class: 'btn btn-primary', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
@@ -70,7 +70,9 @@
       <td><%= ware.ware_name %></td>
       <td><%= ware.provider_name %></td>
       <td><%= ware.comment %></td>
-      <td class="center-cell" id="status-cell"><%= ware.status %></td>
+      <%= tag.td class: 'center-cell', id: 'status-cell', status: ware.status do %>
+        <%= ware.translated_status %>
+      <% end %>
       <td class="center-cell">
         <%= link_to edit_ware_path(ware), remote: true do %>
           <%= image_tag("edit-icon.png", size: "30x30") %>
@@ -90,8 +92,9 @@
 </div>
 
 <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document" data-backdrop="static">
     <div class="modal-content">
+
     </div>
   </div>
 </div>
